Revert "fix: put reply and delete buttons next to each other to prevent delete button from popping out of the screen"
This reverts commit 57362e0a5f3770159b09bde77bab997c25a6d9af.

--- a/src/platform/web/ui/css/themes/element/theme.css
+++ b/src/platform/web/ui/css/themes/element/theme.css
@@ -726,9 +726,6 @@ button.link {
     list-style: none;
     margin: 0;
     width: calc(100% - 48px);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .menu li{
@@ -740,7 +737,7 @@ button.link {
     border: none;
     background-color: transparent;
     text-align: left;
-    padding: 8px;
+    padding: 8px 32px 8px 8px;
     font-size: 1.5rem;
     height: 24px;
     cursor: pointer;
@@ -752,9 +749,8 @@ button.link {
 
 .menu .quick-reactions {
     display: flex;
-    padding: 8px 8px 0;
+    padding: 8px;
     flex-wrap: wrap;
-    flex-basis: 100%;
 }
 
 .menu .quick-reactions button {
